test/netlist/error/ram-arity.bop
RAM r (2, 3)

write(a:[2], b:[3]) = o:[3]
where
  o:[3] = ram_r(a:[2], b:[3]);
end where;
